Fixed a bug where Rich Text field menus were being cut off within Matrix

--- a/src/resources/css/craft.scss
+++ b/src/resources/css/craft.scss
@@ -948,7 +948,7 @@ ul.errors li { color: $errorcolor; }
 .matrix-configurator .field-settings > .col-inner-container > .heading { margin: 0; padding: 7px 15px 6px; border-bottom: 1px solid rgba(0,0,0,0.06); @include linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.03)); }
 
 /* blocks */
-.matrixblock { position: relative; margin-bottom: 4px; border-bottom: 1px solid $hrcolor; padding: 15px 16px; background: #fff; overflow: hidden; @include unselectable;
+.matrixblock { position: relative; margin-bottom: 4px; border-bottom: 1px solid $hrcolor; padding: 15px 16px; background: #fff; @include unselectable;
 	-webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2);
 	   -moz-box-shadow: 0 0 3px rgba(0,0,0,0.2);
 }
